--- a/JavaDemoGithubPractice/app/src/main/res/values/strings.xml
+++ b/JavaDemoGithubPractice/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_github_name" translatable="false">DEMOGITHUB</string>
+    <string name="app_github_name" translatable="false">EasyHub</string>
     <string name="navigation_drawer_open" translatable="false">navigation_drawer_open</string>
     <string name="navigation_drawer_close" translatable="false">navigation_drawer_close</string>
 
